Argument parses changed. Added '-e' option to log exceptions

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,4 +14,4 @@ services:
             context: .
             dockerfile: Dockerfile
         # An argument to python script
-        command: -d   
+        command: -d -e
